Fix hero image positioning on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,7 +8,7 @@
   background-color: white;
   background-image: url("{{ site.baseurl }}/assets/images/hero.jpg");
   background-size: cover;
-  background-position: center;
+  background-position: left center;
   background-repeat: no-repeat;
   min-height: calc(80vh);
   text-shadow: 2px 2px 2px rgb(80, 80, 80);
